# holochan

./: Cargo.toml  README.md  flake.lock.backup  package-lock.json  package.json
dnas/imageboard/workdir/: dna.yaml
dnas/imageboard/zomes/coordinator/file_storage/: Cargo.toml
dnas/imageboard/zomes/coordinator/posts/src/: all_boards.rs  all_threads.rs  board.rs  lib.rs  (+6 more)
dnas/imageboard/zomes/integrity/file_storage/: Cargo.toml
tests/src/imageboard/posts/: all-boards.test.ts  all-posts.test.ts  all-threads.test.ts  board.test.ts  common.ts  creator-to-posts.test.ts  post.test.ts  posts-by-thread.test.ts  thread-to-boards.test.ts  thread-to-posts.test.ts  thread.test.ts
ui/: package.json  tsconfig.json
ui/src/: App.svelte  contexts.ts  index.css
ui/src/components/: ClientProvider.svelte  FileDisplay.svelte  FileUpload.svelte  Navbar.svelte  PostsSection.svelte  StatusCard.svelte  ThreadSection.svelte
ui/src/elements/: CreatePostForm.svelte  CreateThreadForm.svelte  Homepage.svelte  ThreadList.svelte  ThreadUi.svelte
ui/src/imageboard/posts/: AllBoards.svelte  AllPosts.svelte  AllThreads.svelte  BoardDetail.svelte  BoardsForThread.svelte  CreateBoard.svelte  CreatePost.svelte  CreateThread.svelte  EditBoard.svelte  EditPost.svelte  EditThread.svelte  PostDetail.svelte  PostsByThread.svelte  PostsForCreator.svelte  PostsForPost.svelte  PostsForThread.svelte  ThreadDetail.svelte  ThreadsForThread.svelte  types.ts
ui/src/lib/: types.ts  utils.ts
ui/src/store/: FileStore.svelte  FileStore.ts  PostStore.ts  ThreadStore.ts
workdir/: happ.yaml  web-happ.yaml
(+7 files in other folders)
